--- a/toast.css
+++ b/toast.css
@@ -3,10 +3,13 @@
   --success: #2bc48a;
 }
 #notifications-copy {
-  position: fixed !important;
+  position: fixed;
   top: 30px;
   right: 20px;
-  z-index: 999 !important;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  width: auto;
 }
 #notifications-copy :where(.natifactions-toast) {
   display: flex;
@@ -24,7 +27,6 @@
   justify-content: space-between;
   animation: show_toast 0.3s ease forwards;
   align-items: center;
-  float: right;
 }
 @keyframes show_toast {
   0% {
@@ -82,6 +84,20 @@
   border-radius: 50px;
   color: var(--light);
   font-size: 13px;
+}
+
+.close-icon {
+  cursor: pointer;
+}
+
+.close-icon::before {
+  display: block;
+  content: "\f13d";
+  font-family: bobjoll;
+  font-style: normal;
+  font-weight: 400;
+  font-variant: normal;
+  font-size: 15px;
 }
 
 @keyframes progress {
